UPDATE ::: Removing duplicate zookeeper jar and excluding vulnerable log4j version
git-svn-id: svn://107.170.10.188:8080/Semoss/dev@45560 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

Former-commit-id: 698b4a7b1c05b232fbc2c0ec8fd4c77a84a1389e

--- a/pom.xml
+++ b/pom.xml
@@ -1620,17 +1620,6 @@
 			<version>2.3.20</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.zookeeper</groupId>
-			<artifactId>zookeeper</artifactId>
-			<version>3.4.10</version>
-			<exclusions>
-				<exclusion>
-					<groupId>*</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
 			<groupId>com.microsoft.azure</groupId>
 			<artifactId>azure-storage</artifactId>
 			<version>8.0.0</version>
@@ -1894,6 +1883,12 @@
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
             <version>3.6.2</version>
+            <exclusions>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+			</exclusions>
         </dependency>
         <dependency>
 		  <groupId>org.elasticsearch.plugin</groupId>
